--- a/PlusUltraContacts.WebApp/Views/Contacts/Details.cshtml
+++ b/PlusUltraContacts.WebApp/Views/Contacts/Details.cshtml
@@ -4,28 +4,29 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<small class="breadcrumb">Contact/Details</small>
+
 
 <div>
     <h4>Contact</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Phone)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Phone)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DayOfBirth)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DayOfBirth)
         </dd>
     </dl>
