--- a/PlusUltraContacts.WebApp/Views/Contacts/Edit.cshtml
+++ b/PlusUltraContacts.WebApp/Views/Contacts/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<small class="breadcrumb">Contact/Edit</small>
 
-<h4>Contact</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
