--- a/PlusUltraContacts.WebApp/Views/Shared/_Layout.cshtml
+++ b/PlusUltraContacts.WebApp/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         </li>
                     </ul>
                     <span class="navbar-text">
-                        <a class="btn btn-primary text-white" href="/Contacts/Cadastrar" role="button"><i class="fas fa-plus-circle"></i> Cadastrar</a>
+                        <a class="btn btn-primary text-white" href="/Contacts/Create" role="button"><i class="fas fa-plus-circle"></i> Cadastrar</a>
                     </span>
                 </div>
             </div>
