--- a/PlusUltraContacts.WebApp/Views/Contacts/Delete.cshtml
+++ b/PlusUltraContacts.WebApp/Views/Contacts/Delete.cshtml
@@ -4,8 +4,14 @@
     ViewData["Title"] = "Delete";
 }
 <small class="breadcrumb">Contact/Delete</small>
-
-
+<div class="row">
+    <div class="my-5 col-md-6">
+        <h2 class="display-4">Excluir este <br /><span class=" text-primary">aniversariante</span></h2>
+        <p class="lead">Essa pessoa nem é tão importante assim ¬¬'.</p>
+    </div>
+    <div class="col-md-6 d-none d-md-block" style=" background: url('https://i.ibb.co/c2Jy2mL/undraw-Throw-away-re-x60k.png') no-repeat center center / contain; min-height: 300px;">
+    </div>
+</div>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Contact</h4>
@@ -33,7 +39,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger mr-sm-2" />
+        <a class="btn btn-light" asp-action="Index">Back to List</a>
     </form>
 </div>
